This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/16/23: Added script commands to report the system path and the values of an
item of image metadata that would be saved to an .mdoc file.

4/16/23: Added File menu entry to set the current directory.

4/16/23: Added Script menu entry to prevent program from retunring keyboard
focus to one-line script window.

4/16/23: Added property to allow dose calibrations to be used with fringe-free
illumination where beam brightness does not change with intensity in
nanoprobe.

4/12/23: Fixed range checking of "every N minutes" entry in Acquire at Items,
which made entry stop working after another change in 4.1 (In 4.0).

4/10/23: Allowed Escape key in One-line script window to return focus to main
program.

4/10/23: Made peak erasing in second round of Realign to Item probably work
better by not trimming images being correlated to their overlapping region.

4/10/23: Made peak detection for erasing in FFTs adjust for tilt angle; made
peak erasing for Realign to Item be off by default for now.

4/10/23: Added details about shots, remaining numbers, and rates to progress
line during Acquire at Items.

4/10/23: Added StopBackgroundTilt command that seems to work on JEOL and
latest FEI scope server versions.

4/10/23: Added script command to read one piece of a montage.

4/10/23: Added flags to MultiplRecords force doing regular or custom holes.

3/31/23: One-line script changes: focus now returns the the text box of the
script that was run when it finishes.  Enabled Ctrl-C and Ctrl-V for copy and
paste, Ctrl-U to delete the line, and up and down arrows to move between
lines.

3/31/23: Managed the Smaller/Larger intensity buttons in the autocenter setup