@@ -1458,7 +1458,8 @@
 #define IDC_RUN_ONE_LINE3               2463
 #define IDC_RUN_ONE_LINE4               2464
 #define IDC_RUN_ONE_LINE5               2465
-#define IDC_CHECK_USE_CORR_DBL_SAMP     2467
+#define IDC_CHECK_USE_CORR_DBL_SAMP     2466
+#define IDC_STATLISTHEADER1             2467
 #define IDC_STATLISTHEADER2             2468
 #define IDC_STATLISTHEADER3             2469
 #define IDC_STATLISTHEADER4             2470
@@ -2689,6 +2690,10 @@
 #define ID_SCRIPT_SET                   33510
 #define ID_SCRIPT_SET_NUM_STATUS        33511
 #define ID_SCRIPT_MONOSPACESTATUSLINES  33512
+#define ID_SCRIPT_KEEPFOCUSONONELINE    33513
+#define ID_FILE_SETCURRENTDIRECTORY     33514
+#define ID_SETTINGS_MISCELLANEOUSOPTIONS 33515
+#define ID_MISCELLANEOUSOPTIONS_REVERSEWHEELZOOMDIRECTION 33516
 
 // Next default values for new objects
 // 
@@ -2696,7 +2701,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_3D_CONTROLS                     1
 #define _APS_NEXT_RESOURCE_VALUE        282
-#define _APS_NEXT_COMMAND_VALUE         33513
+#define _APS_NEXT_COMMAND_VALUE         33518
 #define _APS_NEXT_CONTROL_VALUE         3180
 #define _APS_NEXT_SYMED_VALUE           104
 #endif
