@@ -3,8 +3,14 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+4/16/23: Added option to reverse direction of zoom with mouse wheel to a new
+Miscellaneous Options submenu of settings.
+
 4/16/23: Added script commands to report the system path and the values of an
-item of image metadata that would be saved to an .mdoc file.
+item of image metadata using the key with which itwould be saved to an .mdoc
+file.
+
+4/16/23: Made OpenOldFile command skip montage setup dialog.
 
 4/16/23: Added File menu entry to set the current directory.
 
